<resources>
    <string name="app_name">返利投</string>
    <string name="home_bottom">首页</string>
    <string name="discover_bottom">发现</string>
    <string name="account_bottom">账本</string>
    <string name="mine_bottom">我的</string>
    <string name="twice_exit">再按一次退出返利投</string>
    <string name="net_error">网络不太给力，请检查网络后重试</string>
    <string name="fixed">固收</string>
    <string name="fund">基金</string>
    <string name="gold">黄金</string>
    <string name="current">活期</string>
    <string name="crowd_funding">众筹</string>
    <string name="abroad">海外</string>
    <string name="insurance">保险</string>
    <string name="silk_bag">锦囊</string>
    <string name="favorite_commend">推荐收藏的平台</string>
    <string name="favorite_add">收藏平台</string>
    <string name="loading">正在加载中...</string>
    <string name="recommend_bid">推荐标的</string>
    <string name="year_more_income">年化返利</string>
    <string name="year_income">年化收益</string>
    <string name="platform">平台</string>
    <string name="load">上拉加载</string>
    <string name="no_more">已经全部加载完成啦</string>
    <string name="platform_type">平台类别</string>
    <string name="unlimited">不限</string>
    <string name="auto_register">账户直通</string>
    <string name="fanlitou_activity">返利投活动</string>
    <string name="platform_fanlitou">返利投相关</string>
    <string name="platform_activity">平台活动</string>
    <string name="new_regist">新手注册</string>
    <string name="invest_price">投资奖品</string>
    <string name="red_pockets">红包活动</string>
    <string name="ext_tickets">送优惠券</string>
    <string name="platform_background">平台背景</string>
    <string name="public_platform">上市系</string>
    <string name="vc_platform">风投系</string>
    <string name="country_platform">国资系</string>
    <string name="private_platform">民营系</string>
    <string name="btn_clear">清空</string>
    <string name="btn_ok">确定</string>
    <string name="pull_to_refresh">请检查网络后重试</string>
    <string name="choose_platform">选择常用的理财平台</string>
    <string name="title_alert">提示</string>
    <string name="btn_cancel">取消</string>
    <string name="my_fund">我的基金</string>
    <string name="invest_record">投资记录</string>
    <string name="money_details">资金明细</string>
    <string name="my_red_packet">我的奖励</string>
    <string name="invitation_courtesy">邀请有礼</string>
    <string name="account_management">平台管理</string>
    <string name="presentation_record">提现记录</string>
    <string name="newbie_guide">新手指南</string>
    <string name="card_management">银行卡管理</string>
    <string name="invested">已投项目</string>
    <string name="fund_list">投资报表</string>
    <string name="money_back">回款日历</string>
    <string name="invent">邀请码/邀请人手机号（可不填）</string>
    <string name="newer_guide">新手指南</string>

    <!-- Gesture login activity -->
    <string name="gesture_forget_gesture">忘记手势密码</string>
    <string name="gesture_default">请输入手势密码</string>
    <string name="gesture_error">密码错误</string>
    <string name="gesture_correct">输入正确</string>

    <!-- Create gesture activity -->
    <string name="create_gesture_activity">CreateGestureActivity</string>
    <string name="create_gesture_default">绘制解锁图案，至少连接4个点</string>
    <string name="create_gesture_correct">再次绘制解锁图案</string>
    <string name="create_gesture_less_error">至少连接4个点，请重新输入</string>
    <string name="create_gesture_confirm_error">与首次次绘制不一致，请重新绘制</string>
    <string name="create_gesture_confirm_correct">设置成功</string>
    <string name="create_gesture_reset">重新绘制</string>

    <string name="xrefreshview_header_hint_normal">下拉刷新</string>
    <string name="xrefreshview_header_hint_ready">松开刷新数据</string>
    <string name="xrefreshview_header_hint_refreshing">正在刷新</string>
    <string name="xrefreshview_header_hint_loading">正在刷新</string>
    <string name="xrefreshview_header_hint_loaded">加载完成</string>
    <string name="xrefreshview_header_hint_loaded_fail">加载失败</string>
    <string name="xrefreshview_header_last_time">上次更新时间：</string>
    <string name="xrefreshview_footer_hint_normal">加载完成</string>
    <string name="xrefreshview_footer_hint_fail">加载失败，请重试</string>
    <string name="xrefreshview_footer_hint_complete">暂无更多内容</string>
    <string name="xrefreshview_footer_hint_click">点击加载更多</string>
    <string name="xrefreshview_footer_hint_release">松开加载更多</string>
    <string name="xrefreshview_footer_hint_ready">释放加载更多</string>
    <string name="xrefreshview_never_refresh">从未刷新</string>
    <string name="xrefreshview_refresh_justnow">刚刚刷新</string>
    <string name="xrefreshview_refresh_minutes_ago">%1s分钟之前刷新</string>
    <string name="xrefreshview_refresh_hours_ago">%1s小时之前刷新</string>
    <string name="xrefreshview_refresh_days_ago">%1s天之前刷新</string>
</resources>
