<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout_platform"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorStatusGray"
    tools:context=".activity.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorLine"
        android:orientation="vertical">

        <com.changju.fanlitou.ui.NoScrollViewPager
            android:id="@+id/view_pager_main"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/colorBackground"/>

        <View style="@style/bg_line"/>

        <FrameLayout
            android:layout_marginTop="-10dp"
            android:layout_width="match_parent"
            android:background="@android:color/transparent"
            android:layout_height="54dp">

        <RadioGroup
            android:layout_gravity="bottom"
            android:id="@+id/radio_group_bottom_main"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:paddingTop="6dp"
            android:paddingBottom="2dp"
            android:background="@android:color/white"
            android:orientation="horizontal">


            <RadioButton
                android:id="@+id/rb_home"
                style="@style/RadioButtonStyle"
                android:checked="true"
                android:drawableTop="@drawable/selector_home_icon_button"
                android:text="@string/home_bottom"/>

            <RadioButton
                android:id="@+id/rb_discover"
                style="@style/RadioButtonStyle"
                android:drawableTop="@drawable/selector_discover_icon_button"
                android:text="@string/discover_bottom"/>

            <RadioButton
                android:drawablePadding="3dp"
                android:button="@null"
                android:id="@+id/rb_fake"
                android:layout_gravity="center"
                android:gravity="center"
                android:drawableTop="@mipmap/activity"
                android:layout_marginStart="13dp"
                android:layout_marginEnd="13dp"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"/>

            <RadioButton
                android:id="@+id/rb_account"
                style="@style/RadioButtonStyle"
                android:drawableTop="@drawable/selector_account_icon_button"
                android:text="@string/account_bottom"/>

            <RadioButton
                android:id="@+id/rb_mine"
                style="@style/RadioButtonStyle"
                android:drawableTop="@drawable/selector_mine_icon_button"
                android:text="@string/mine_bottom"/>
        </RadioGroup>

            <RadioButton
                android:textSize="10dp"
                android:background="@drawable/shape_oval_red_soild"
                android:drawablePadding="3dp"
                android:button="@null"
                android:id="@+id/rb_activity"
                android:textColor="@android:color/white"
                android:drawableTop="@mipmap/activity"
                android:text="活动"
                android:paddingTop="10dp"
                android:paddingBottom="8dp"
                android:layout_gravity="center|top"
                android:gravity="center"
                android:layout_width="60dp"
                android:layout_height="60dp"/>
        </FrameLayout>


    </LinearLayout>

    <!-- 抽屉布局 -->
    <LinearLayout
        android:id="@+id/layout_drawable_open"
        android:layout_width="270dp"
        android:layout_height="match_parent"
        android:layout_gravity="end"
        android:orientation="vertical">

    </LinearLayout>
</android.support.v4.widget.DrawerLayout>